<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.jp</groupId>
    <artifactId>GestaoTi</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>GestaoTi</name>
    <packaging>war</packaging>
    
    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.source>17</maven.compiler.source>
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <failOnMissingWebXml>false</failOnMissingWebXml>
        <jakartaee>10.0.0</jakartaee>
    </properties>
    
    <dependencies>
<!--        <dependency>-->
<!--            <groupId>jakarta.faces</groupId>-->
<!--            <artifactId>jakarta.faces-api</artifactId>-->
<!--            <version>3.0.0</version>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>    -->
<!--        <dependency>-->
<!--            <groupId>jakarta.servlet</groupId>-->
<!--            <artifactId>jakarta.servlet-api</artifactId>-->
<!--            <version>5.0.0</version>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>                                                -->
        <dependency>
            <groupId>jakarta.platform</groupId>
            <artifactId>jakarta.jakartaee-api</artifactId>
            <version>10.0.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/jakarta.faces/jakarta.faces-api -->
<!--        <dependency>-->
<!--            <groupId>jakarta.faces</groupId>-->
<!--            <artifactId>jakarta.faces-api</artifactId>-->
<!--            <version>4.0.1</version>-->
<!--        </dependency>-->

        <!-- https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api -->
<!--        <dependency>-->
<!--            <groupId>jakarta.persistence</groupId>-->
<!--            <artifactId>jakarta.persistence-api</artifactId>-->
<!--            <version>3.1.0</version>-->
<!--        </dependency>-->
        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.33</version>
        </dependency>

        <dependency>
            <groupId>org.primefaces</groupId>
            <artifactId>primefaces</artifactId>
            <version>13.0.5</version>
            <classifier>jakarta</classifier>
        </dependency>

        <!-- Hibernate -->
        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>6.4.4.Final</version>
            <type>pom</type>
        </dependency>

        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>6.4.4.Final</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>8.0.1.Final</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>org.eclipse.persistence</groupId>-->
<!--            <artifactId>org.eclipse.persistence.core</artifactId>-->
<!--            <version>4.0.2</version>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.eclipse.persistence</groupId>-->
<!--            <artifactId>org.eclipse.persistence.asm</artifactId>-->
<!--            <version>9.6.0</version>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.eclipse.persistence</groupId>-->
<!--            <artifactId>org.eclipse.persistence.antlr</artifactId>-->
<!--            <version>2.7.13</version>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.eclipse.persistence</groupId>-->
<!--            <artifactId>org.eclipse.persistence.jpa</artifactId>-->
<!--            <version>4.0.2</version>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.eclipse.persistence</groupId>-->
<!--            <artifactId>org.eclipse.persistence.jpa.jpql</artifactId>-->
<!--            <version>4.0.2</version>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.eclipse.persistence</groupId>-->
<!--            <artifactId>org.eclipse.persistence.moxy</artifactId>-->
<!--            <version>4.0.2</version>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.eclipse.persistence</groupId>-->
<!--            <artifactId>jakarta.persistence</artifactId>-->
<!--            <version>2.2.3</version>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.eclipse.persistence</groupId>-->
<!--            <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>-->
<!--            <version>4.0.2</version>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>-->
    </dependencies>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <compilerArgs>
                        <args>-Djava.endorsed.dirs=${endorsed.dir}</args>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.4.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${endorsed.dir}</outputDirectory>
                            <silent>true</silent>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>jakarta.platform</groupId>
                                    <artifactId>jakarta.jakartaee-api</artifactId>
                                    <version>${jakartaee}</version>
                                    <type>jar</type>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
